- fix pasword visibility icon UX - add user profile pic in senarai-ahli.php

--- a/css/style.css
+++ b/css/style.css
@@ -696,6 +696,11 @@ ul {
     font-weight: normal;
 }
 
+.table td {
+    height: 50px;
+    line-height: 1.8;
+}
+
 .table th {
     background-color: #26272b;
     text-align: left;
@@ -839,6 +844,23 @@ ul {
 /*------------------------------------------------------*/
 
 /* Senarai Ahli Styling */
+
+.profile_img_list_container {
+    position: relative;
+    margin-right: 10px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    overflow: hidden;
+    border: 2px solid #fcfcfc;
+    float: left;
+}
+
+.profile_img_list_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 .searchNupload-container {
     display: flex;
